--- a/index.html
+++ b/index.html
@@ -5,12 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>GifTastic!</title>
+  
+  
   <style>
+
+  .gif-view{}
   .animal {
     margin: 5px;
     font-size: 24px;
   }
+  .content {
+    margin: 15px;
+    float: left;
+    height: 250px;
+    display: inline-block;
+  }
+  .image {
+    padding: 10px;
+    width: 150px;
+  }
+  .content, p {}
+
   </style>
+
+
 </head>
 <body>
 
@@ -33,126 +51,85 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script type="text/javascript">
 
-// Arrays of animals
-  var animals = ["Cats", "Dogs", "Hippos", "Lions", "Bears", "Tigers"];
-  var uniqueNames = [];
+var animals = ["Cats", "Dogs", "Hippos", "Lions", "Bears", "Tigers"];
+// console.log(uniqueAnimals);
+
+
 
 // Function for displaying animal data
-  function renderButtons() {
+function renderButtons() {
 
+  uniqueAnimals = unique(animals) //temp arr to dedup animals arr
 
-    $.each(animals, function(i, el){ // Avoid duplicate items
-        if($.inArray(el, uniqueNames) === -1) uniqueNames.push(el);
-    });
-      console.log("44 Actual array: " + animals)
-      console.log("45 DeDup array: " + uniqueNames)
-
-
-    // Delete the animal buttons prior to adding new animal buttons. Necessary to avoid repeat buttons
-    $("#animals-view").empty();
-
-    for (var i = 0; i < uniqueNames.length; i++) {// Looping through the array of uniqueNames
-      var a = $("<button>");// Then dynamicaly generating buttons for each animal in the array
-      a.addClass("animal");// Adding a class
-      a.attr("data-name", uniqueNames[i]);// Adding a data-attribute with a value of the animal at index i
-      a.text(uniqueNames[i]);// Providing the button's text with a value of the animal at index i
-      $("#animals-view").append(a);// Adding the button to the HTML
-    }// Close for loop
-  }// Close function renderButton 
-    
-// This function handles events where one button is clicked
-  $("#add-animal").on("click", function(event) {
-
-    event.preventDefault();// event.preventDefault() prevents the form from trying to submit itself.
-    var input = $("#animal-input").val().trim();// This line will grab the text from the input box
-    animals.push(input);// The animal from the textbox is then added to our array
-
-    renderButtons();// calling renderButtons which handles the processing of our animal array
-
-
-
-// HELP!  NEEDS TO BE DRY!    
-    $('.animal').click(function() {
-      var animalData = $(this).data()
-      console.log(animalData)//WORKING pulling data from .animal "this" button
-
-      var queryURL = "http://api.giphy.com/v1/gifs/search?q=" + animalData + "&api_key=dc6zaTOxFJmzC&tag=&limit=10";
-// EXAMPLE          http://api.giphy.com/v1/gifs/search?q=funny+cat&api_key=YOUR_API_KEY
-      $.ajax({
-        url: queryURL,
-        method: "GET"
-      }).then(function(response) {
-          console.log(response.data);
+// Arrays animals dedup to uniqueAnimals //WORKING
+  function unique(animals) {//Pass in animals arr
+      var result = [];//store dedup arr
+      $.each(animals, function(i, e) {//for each animal index, element
+          if ($.inArray(e, result) == -1) result.push(e);//if any element returns -1 push to result arr
       });
+      return result;
+  }
 
-    });
-  });
+// Delete the animal buttons prior to adding new animal buttons. Necessary to avoid repeat buttons
+  $("#animals-view").empty();
 
-  renderButtons();// Calling the renderButtons function at least once to display the initial list of animals
+  for (var i = 0; i < uniqueAnimals.length; i++) {// Looping through the array of uniqueAnimals
+    var a = $("<button>");// Then dynamicaly generating buttons for each animal in the array
+    a.addClass("animal");// Add a class of animal
+    a.attr("data-name", uniqueAnimals[i]);// Adding a data-attribute with a value of the animal at index i
+    a.text(uniqueAnimals[i]);// Providing the button's text with a value of the animal at index i
+    $("#animals-view").append(a);// Adding the button to the HTML
+  }// Close for loop
 
-  
-// HELP!  NEEDS TO BE DRY!    
-$('.animal').click(function() {
-            var animalData = $(this).data()
-            console.log(animalData)//WORKING pulling data from .animal "this" button
+  //Animal button on click query Giphy API
+  $('.animal').click(function() {
+              animalData = $(this).data("name")// "name" returns 
+              console.log("67 API call name: " + animalData)//WORKING pulling data from .animal "this" button
 
-  var queryURL = "http://api.giphy.com/v1/gifs/search?q=" + animalData + "&api_key=dc6zaTOxFJmzC&tag=&limit=10";
+    var queryURL = "https://api.giphy.com/v1/gifs/search?q=" + animalData + "&api_key=dc6zaTOxFJmzC&limit=10";
 
-  $.ajax({
-    url: queryURL,
-    method: "GET"
-  }).then(function(response) {
-    console.log(response.data);
-  });
+    $.ajax({
+      url: queryURL,
+      method: "GET"
+    }).then(function(response) {
+      console.log("75: " + JSON.stringify(response.data));
+      
+      $(".gif-view").empty();
 
-// * // TODO
-// for each to process each array and output the src, set animate to still.
-
-
-  
-// // Declare var imageURL make it = to the response.data.image_original_url;
-//   var imageUrl = response.data.image_original_url;
-
-//   // Declare var image = to $("<img>")
-//   var image = $("<img>");
-
-//   // Apply attr, src, with imageURL. Apply attr; alt, with "cat image".
-//   image.attr("src", imageUrl);
-//   image.attr("alt", "cat image");
-
-//   // Selects id images, prepent(image)
-//   $("#gif-view").prepend(image);
-})
-// });
-
-
-  // });
-
-
-
-
-
-
-// TOGGLE GIPHY STATE AND SRC: STILL AND ANIMATE
-  // var state = $(this).attr("data-state");
-  
-
-  // if (state === "still") {
-  //     $(this).attr("src", $(this).attr("data-animate"))
-  //     $(this).attr("data-state", "animate");
-  // } else {
-  //     $(this).attr("src", $(this).attr("data-still"));
-  //     $(this).attr("data-state", "still");
-  function checkforblank() {
-      if (document.getElementById('animal-input').value == "") {
-        $('#animal-input').attr('placeholder','SEARCH HERE');
-        // alert('Search cannot be blank');
-        document.getElementById('animal-input').style.borderColor = "red";
-        return false;
-      }
+    for (var i = 0; i < response.data.length; i++) {//loop through data for needed responses
+      var rating = response.data[i].rating;//rating
+      var imgURL = response.data[i].images.downsized.url;//image
+      var content = $("<div class='content'>");
+      var ratingP = $("<p>").text("Rating: " + rating);
+      var image = $("<img class='image'>").attr("src", imgURL);
+      content.append(ratingP, image);// add rating and the image to the page
+      // rendering the content to the .gif-view
+      $(".gif-view").prepend(content);
     }
 
-        </script>
+    });
+  });
+}// Close function renderButton 
+
+
+
+// CHECK #animal-input verify not blank // WORKING
+  function checkforblank() { //CHECKS #animal-input field if empty change placeholder text, set border red
+      if ($('#animal-input').val() == "") {
+        $('#animal-input').attr('placeholder','SEARCH HERE');
+        document.getElementById('animal-input').style.borderColor = "red";
+      return false;
+      } else 
+        event.preventDefault()
+        var animalVal = $('#animal-input').val();
+        // console.log("163: " + animalVal)//WORKING
+        animals.push(animalVal)
+        renderButtons()
+      }
+
+  console.log("131 initial start: renderButtons")
+  renderButtons();// Calling the renderButtons function at least once to display the initial list of animals
+  </script>
 </body>
 </html>
 
